Fix: too much height

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,7 +17,7 @@ body {
 
 h1, h2, h3 {
     line-height: 1.3;   
-    margin-top: 1.5em;
+    //margin-top: 1.5em;
 }
 
 // =========================
